package com.examen_5.Ejercicio_1.Entrega_3.Command;

public interface Comando {
    void ejecutar();
}

